about section overlap fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1029,6 +1029,13 @@ section,
   margin-bottom: -100px;
 }
 
+@media (max-width: 992px) {
+  .about .content .img-overlap {
+    margin-bottom: 10px;
+  }
+  
+}
+
 .about p {
   color: var(--contrast-color);
 }
